# ochw

./: .gitignore  Cargo.toml  README.md  gnt_to_png.py  hello.py  loss.py  model.py  predict.py  pyproject.toml  train.py  trainer.py
libochw/: Cargo.toml  README.md
libochw/src/: infer.rs  lib.rs  utils.rs  worker.rs
libochw/src/models/: mod.rs  sequential.rs
ochw-wasm/: .gitignore  Cargo.toml  build.sh
ochw-wasm/.cargo/: config.toml
ochw-wasm/src/: lib.rs  worker.rs
ochw-wasm/src/models/: mobilenetv2.rs  mod.rs
ochw-wasm/testdata/: label.txt
ochw-web/: index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
ochw-web/src/: App.tsx  worker.ts
training/: .gitignore  dataset.py  export_to_savetensers.py  gnt_to_png.py  model.py  model_resnet18.txt  predict.py  pyproject.toml  train.py  trainer.py  util.py
training/data/: .gitignore
