[package]
name = "libochw"
version = "0.2.0"
edition = "2024"
authors = ["kingzcheung"]
description = "一个支持汉字手写识别的库"
repository = "https://github.com/ximeiorg/ochw"
license = "Apache-2.0"
keywords = ["writing", "handwriting", "candle","mobilenetv2"]
readme = "README.md"

[dependencies]
candle-nn = {version = "0.9.0", optional = true}
candle-core = {version = "0.9.0", optional = true}
image = "0.25.6"
anyhow = "1.0.98"
serde = {workspace = true}
serde_json = {workspace = true}
imageproc = "0.25.0"

[features]
default = ["cpu"]
cpu = ["candle-core","candle-nn"]
cuda = ["candle-core/cuda","candle-nn/cuda"]
